test/errors/error20.base
This function is expected to have type 'int' but nothing was returned.
fun foo () : int {
    ^^^
